--- a/src/main/webapp/WEB-INF/views/test.html
+++ b/src/main/webapp/WEB-INF/views/test.html
@@ -4,7 +4,7 @@
 <script >
 var socket;
 function connect() {
-	alert('connect');
+	alert('start connect');
 	if (!window.WebSocket) {
   		window.WebSocket = window.MozWebSocket;
 	}
